# self-checkout-backend

./: .env  .gitignore  Dockerfile  Dockerfile.prod  db.sqlite3  docker-compose.ci.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: serializers.py  urls.py  views.py
core/: auth.py  celery.py  settings.py  tasks.py  urls.py  views.py
core/utils/: health.py  notifications.py  reports.py
deploy/: entrypoint.sh  nginx.conf
notifications/: services.py
pos/: admin.py  auth.py  flow.py  models.py
pos/management/commands/: populate.py
pos/migrations/: 0001_initial.py  0002_alter_category_options_and_more.py  0002_alter_historicalstock_quantity_and_more.py  0003_alter_category_options_and_more.py  0003_alter_pointofsaletoken_token.py  0004_alter_category_options_and_more.py  0004_alter_pointofsaletoken_token.py  0005_alter_pointofsaletoken_token.py  0005_historicalpayment_payment_url_payment_payment_url.py  0006_alter_historicalorder_state_alter_order_state.py  0007_pointofsaletoken.py
pos/templates/admin/pos/order/: change_form.html
pos/templates/admin/pos/pointofsaletoken/: change_form.html
pos/tests/: conftest.py  factories.py  test_models.py  test_reports.py  test_tasks.py  test_views.py
